compiler/grammar.output
State 63 conflicts: 1 reduce/reduce
State 67 conflicts: 1 shift/reduce
State 125 conflicts: 4 shift/reduce
State 126 conflicts: 4 shift/reduce
State 127 conflicts: 4 shift/reduce
State 128 conflicts: 4 shift/reduce
State 130 conflicts: 1 shift/reduce
State 131 conflicts: 1 shift/reduce
State 172 conflicts: 2 shift/reduce
State 173 conflicts: 2 shift/reduce
State 186 conflicts: 1 shift/reduce
State 196 conflicts: 1 shift/reduce
State 207 conflicts: 1 shift/reduce
State 227 conflicts: 1 shift/reduce


Grammar

    0 $accept: input $end

    1 input: libraries procedure_main_is function_list

    2 libraries: library libraries
    3          | %empty

    4 library: INCLUDE LEFT_ANGLE_BRACKET name DOT name RIGHT_ANGLE_BRACKET

    5 procedure_main_is: linefeed
    6                  | %empty

    7 function_list: function function_list
    8              | %empty

    9 function: type name LEFT_ROUND_BRACKET argument_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET statements RIGHT_CURLY_BRACKET
   10         | VOID_TYPE name LEFT_ROUND_BRACKET argument_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET statements RIGHT_CURLY_BRACKET

   11 argument_list: argument COMMA argument_list
   12              | argument

   13 argument: type name
   14         | %empty

   15 expression: LEFT_ROUND_BRACKET expression RIGHT_ROUND_BRACKET
   16           | expression PLUS expression
   17           | expression MINUS expression
   18           | expression MULTIPLY expression
   19           | expression DIVIDE expression
   20           | NUMBER
   21           | name
   22           | TRUE_STR
   23           | FALSE_STR

   24 name: NAME

   25 number: NUMBER

   26 type: INT_TYPE
   27     | DOUBLE_TYPE
   28     | FLOAT_TYPE
   29     | CHAR_TYPE
   30     | STRING_TYPE
   31     | BOOL_TYPE

   32 statements: statement statements
   33           | %empty

   34 statement: variable
   35          | name PLUS PLUS SEMICOLON
   36          | name MINUS MINUS SEMICOLON
   37          | name EQUALS expression SEMICOLON
   38          | name PLUS EQUALS expression SEMICOLON
   39          | name MINUS EQUALS expression SEMICOLON
   40          | name MULTIPLY EQUALS expression SEMICOLON
   41          | name DIVIDE EQUALS expression SEMICOLON
   42          | PRINTF LEFT_ROUND_BRACKET QUOTE name QUOTE RIGHT_ROUND_BRACKET SEMICOLON
   43          | PRINTF LEFT_ROUND_BRACKET QUOTE number QUOTE RIGHT_ROUND_BRACKET SEMICOLON
   44          | while
   45          | if
   46          | do_while
   47          | for
   48          | switch
   49          | return_statement

   50 return_statement: RETURN name SEMICOLON
   51                 | RETURN number SEMICOLON
   52                 | RETURN expression SEMICOLON
   53                 | RETURN SEMICOLON

   54 variable: type name SEMICOLON
   55         | type name EQUALS expression SEMICOLON

   56 statement_with_or_without_brackets: LEFT_CURLY_BRACKET statements RIGHT_CURLY_BRACKET
   57                                   | statement

   58 while: WHILE LEFT_ROUND_BRACKET conditions RIGHT_ROUND_BRACKET statement_with_or_without_brackets

   59 conditions: LEFT_ROUND_BRACKET conditions RIGHT_ROUND_BRACKET
   60           | conditions AND conditions
   61           | conditions OR conditions
   62           | condition

   63 condition: expression
   64          | name condition_operand expression
   65          | LEFT_ROUND_BRACKET name RIGHT_ROUND_BRACKET condition_operand expression
   66          | LEFT_ROUND_BRACKET name RIGHT_ROUND_BRACKET condition_operand LEFT_ROUND_BRACKET name RIGHT_ROUND_BRACKET
   67          | name condition_operand LEFT_ROUND_BRACKET name RIGHT_ROUND_BRACKET
   68          | QUOTE name QUOTE

   69 condition_operand: GREATER_EQUAL
   70                  | LESS_EQUAL
   71                  | EQUAL_EQUAL
   72                  | NOT_EQUAL
   73                  | LEFT_ANGLE_BRACKET
   74                  | RIGHT_ANGLE_BRACKET

   75 if: IF LEFT_ROUND_BRACKET conditions RIGHT_ROUND_BRACKET statement_with_or_without_brackets else_ifs
   76   | IF LEFT_ROUND_BRACKET conditions RIGHT_ROUND_BRACKET statement_with_or_without_brackets else_ifs ELSE statement_with_or_without_brackets

   77 else_ifs: ELSEIF LEFT_ROUND_BRACKET conditions RIGHT_ROUND_BRACKET statement_with_or_without_brackets
   78         | %empty

   79 do_while: DO statement_with_or_without_brackets WHILE LEFT_ROUND_BRACKET conditions RIGHT_ROUND_BRACKET SEMICOLON

   80 for: FOR LEFT_ROUND_BRACKET for_expression RIGHT_ROUND_BRACKET statement_with_or_without_brackets

   81 for_expression: SEMICOLON conditions SEMICOLON
   82               | for_statement SEMICOLON conditions SEMICOLON
   83               | SEMICOLON conditions SEMICOLON for_step
   84               | for_statement SEMICOLON conditions SEMICOLON for_step

   85 for_statement: NAME
   86              | type NAME EQUALS expression
   87              | for_step

   88 for_step: NAME PLUS PLUS
   89         | NAME MINUS MINUS
   90         | NAME EQUALS expression
   91         | NAME PLUS EQUALS expression
   92         | NAME MINUS EQUALS expression
   93         | NAME MULTIPLY EQUALS expression
   94         | NAME DIVIDE EQUALS expression

   95 switch: SWITCH LEFT_ROUND_BRACKET NAME RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET cases RIGHT_CURLY_BRACKET
   96       | SWITCH LEFT_ROUND_BRACKET NAME RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET cases default RIGHT_CURLY_BRACKET

   97 cases: case cases
   98      | case

   99 case: CASE value COLON statements break

  100 value: QUOTE NAME QUOTE
  101      | NUMBER

  102 break: BREAK SEMICOLON
  103      | %empty

  104 default: DEFAULT COLON statements break


Terminals, with rules where they appear

$end (0) 0
error (256)
SEMICOLON (258) 35 36 37 38 39 40 41 42 43 50 51 52 53 54 55 79 81
    82 83 84 102
DOT (259) 4
COMMA (260) 11
QUOTE (261) 42 43 68 100
COLON (262) 99 104
LEFT_ROUND_BRACKET (263) 9 10 15 42 43 58 59 65 66 67 75 76 77 79 80
    95 96
RIGHT_ROUND_BRACKET (264) 9 10 15 42 43 58 59 65 66 67 75 76 77 79
    80 95 96
RIGHT_ANGLE_BRACKET (265) 4 74
LEFT_ANGLE_BRACKET (266) 4 73
LEFT_CURLY_BRACKET (267) 9 10 56 95 96
RIGHT_CURLY_BRACKET (268) 9 10 56 95 96
NAME (269) 24 85 86 88 89 90 91 92 93 94 95 96 100
INCLUDE (270) 4
INT_TYPE (271) 26
DOUBLE_TYPE (272) 27
FLOAT_TYPE (273) 28
CHAR_TYPE (274) 29
STRING_TYPE (275) 30
BOOL_TYPE (276) 31
VOID_TYPE (277) 10
PRINTF (278) 42 43
RETURN (279) 50 51 52 53
WHILE (280) 58 79
DO (281) 79
FOR (282) 80
IF (283) 75 76
ELSE (284) 76
ELSEIF (285) 77
SWITCH (286) 95 96
CASE (287) 99
BREAK (288) 102
DEFAULT (289) 104
GREATER_EQUAL (290) 69
LESS_EQUAL (291) 70
EQUAL_EQUAL (292) 71
NOT_EQUAL (293) 72
EQUALS (294) 37 38 39 40 41 55 86 90 91 92 93 94
AND (295) 60
OR (296) 61
PLUS (297) 16 35 38 88 91
MINUS (298) 17 36 39 89 92
MULTIPLY (299) 18 40 93
DIVIDE (300) 19 41 94
NUMBER (301) 20 25 101
TRUE_STR (302) 22
FALSE_STR (303) 23
linefeed (304) 5


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
input (51)
    on left: 1, on right: 0
libraries (52)
    on left: 2 3, on right: 1 2
library (53)
    on left: 4, on right: 2
procedure_main_is (54)
    on left: 5 6, on right: 1
function_list (55)
    on left: 7 8, on right: 1 7
function (56)
    on left: 9 10, on right: 7
argument_list (57)
    on left: 11 12, on right: 9 10 11
argument (58)
    on left: 13 14, on right: 11 12
expression (59)
    on left: 15 16 17 18 19 20 21 22 23, on right: 15 16 17 18 19 37
    38 39 40 41 52 55 63 64 65 86 90 91 92 93 94
name (60)
    on left: 24, on right: 4 9 10 13 21 35 36 37 38 39 40 41 42 50
    54 55 64 65 66 67 68
number (61)
    on left: 25, on right: 43 51
type (62)
    on left: 26 27 28 29 30 31, on right: 9 13 54 55 86
statements (63)
    on left: 32 33, on right: 9 10 32 56 99 104
statement (64)
    on left: 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49, on right:
    32 57
return_statement (65)
    on left: 50 51 52 53, on right: 49
variable (66)
    on left: 54 55, on right: 34
statement_with_or_without_brackets (67)
    on left: 56 57, on right: 58 75 76 77 79 80
while (68)
    on left: 58, on right: 44
conditions (69)
    on left: 59 60 61 62, on right: 58 59 60 61 75 76 77 79 81 82 83
    84
condition (70)
    on left: 63 64 65 66 67 68, on right: 62
condition_operand (71)
    on left: 69 70 71 72 73 74, on right: 64 65 66 67
if (72)
    on left: 75 76, on right: 45
else_ifs (73)
    on left: 77 78, on right: 75 76
do_while (74)
    on left: 79, on right: 46
for (75)
    on left: 80, on right: 47
for_expression (76)
    on left: 81 82 83 84, on right: 80
for_statement (77)
    on left: 85 86 87, on right: 82 84
for_step (78)
    on left: 88 89 90 91 92 93 94, on right: 83 84 87
switch (79)
    on left: 95 96, on right: 48
cases (80)
    on left: 97 98, on right: 95 96 97
case (81)
    on left: 99, on right: 97 98
value (82)
    on left: 100 101, on right: 99
break (83)
    on left: 102 103, on right: 99 104
default (84)
    on left: 104, on right: 96


State 0

    0 $accept: . input $end

    INCLUDE  shift, and go to state 1

    $default  reduce using rule 3 (libraries)

    input      go to state 2
    libraries  go to state 3
    library    go to state 4


State 1

    4 library: INCLUDE . LEFT_ANGLE_BRACKET name DOT name RIGHT_ANGLE_BRACKET

    LEFT_ANGLE_BRACKET  shift, and go to state 5


State 2

    0 $accept: input . $end

    $end  shift, and go to state 6


State 3

    1 input: libraries . procedure_main_is function_list

    linefeed  shift, and go to state 7

    $default  reduce using rule 6 (procedure_main_is)

    procedure_main_is  go to state 8


State 4

    2 libraries: library . libraries

    INCLUDE  shift, and go to state 1

    $default  reduce using rule 3 (libraries)

    libraries  go to state 9
    library    go to state 4


State 5

    4 library: INCLUDE LEFT_ANGLE_BRACKET . name DOT name RIGHT_ANGLE_BRACKET

    NAME  shift, and go to state 10

    name  go to state 11


State 6

    0 $accept: input $end .

    $default  accept


State 7

    5 procedure_main_is: linefeed .

    $default  reduce using rule 5 (procedure_main_is)


State 8

    1 input: libraries procedure_main_is . function_list

    INT_TYPE     shift, and go to state 12
    DOUBLE_TYPE  shift, and go to state 13
    FLOAT_TYPE   shift, and go to state 14
    CHAR_TYPE    shift, and go to state 15
    STRING_TYPE  shift, and go to state 16
    BOOL_TYPE    shift, and go to state 17
    VOID_TYPE    shift, and go to state 18

    $default  reduce using rule 8 (function_list)

    function_list  go to state 19
    function       go to state 20
    type           go to state 21


State 9

    2 libraries: library libraries .

    $default  reduce using rule 2 (libraries)


State 10

   24 name: NAME .

    $default  reduce using rule 24 (name)


State 11

    4 library: INCLUDE LEFT_ANGLE_BRACKET name . DOT name RIGHT_ANGLE_BRACKET

    DOT  shift, and go to state 22


State 12

   26 type: INT_TYPE .

    $default  reduce using rule 26 (type)


State 13

   27 type: DOUBLE_TYPE .

    $default  reduce using rule 27 (type)


State 14

   28 type: FLOAT_TYPE .

    $default  reduce using rule 28 (type)


State 15

   29 type: CHAR_TYPE .

    $default  reduce using rule 29 (type)


State 16

   30 type: STRING_TYPE .

    $default  reduce using rule 30 (type)


State 17

   31 type: BOOL_TYPE .

    $default  reduce using rule 31 (type)


State 18

   10 function: VOID_TYPE . name LEFT_ROUND_BRACKET argument_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET statements RIGHT_CURLY_BRACKET

    NAME  shift, and go to state 10

    name  go to state 23


State 19

    1 input: libraries procedure_main_is function_list .

    $default  reduce using rule 1 (input)


State 20

    7 function_list: function . function_list

    INT_TYPE     shift, and go to state 12
    DOUBLE_TYPE  shift, and go to state 13
    FLOAT_TYPE   shift, and go to state 14
    CHAR_TYPE    shift, and go to state 15
    STRING_TYPE  shift, and go to state 16
    BOOL_TYPE    shift, and go to state 17
    VOID_TYPE    shift, and go to state 18

    $default  reduce using rule 8 (function_list)

    function_list  go to state 24
    function       go to state 20
    type           go to state 21


State 21

    9 function: type . name LEFT_ROUND_BRACKET argument_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET statements RIGHT_CURLY_BRACKET

    NAME  shift, and go to state 10

    name  go to state 25


State 22

    4 library: INCLUDE LEFT_ANGLE_BRACKET name DOT . name RIGHT_ANGLE_BRACKET

    NAME  shift, and go to state 10

    name  go to state 26


State 23

   10 function: VOID_TYPE name . LEFT_ROUND_BRACKET argument_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET statements RIGHT_CURLY_BRACKET

    LEFT_ROUND_BRACKET  shift, and go to state 27


State 24

    7 function_list: function function_list .

    $default  reduce using rule 7 (function_list)


State 25

    9 function: type name . LEFT_ROUND_BRACKET argument_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET statements RIGHT_CURLY_BRACKET

    LEFT_ROUND_BRACKET  shift, and go to state 28


State 26

    4 library: INCLUDE LEFT_ANGLE_BRACKET name DOT name . RIGHT_ANGLE_BRACKET

    RIGHT_ANGLE_BRACKET  shift, and go to state 29


State 27

   10 function: VOID_TYPE name LEFT_ROUND_BRACKET . argument_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET statements RIGHT_CURLY_BRACKET

    INT_TYPE     shift, and go to state 12
    DOUBLE_TYPE  shift, and go to state 13
    FLOAT_TYPE   shift, and go to state 14
    CHAR_TYPE    shift, and go to state 15
    STRING_TYPE  shift, and go to state 16
    BOOL_TYPE    shift, and go to state 17

    $default  reduce using rule 14 (argument)

    argument_list  go to state 30
    argument       go to state 31
    type           go to state 32


State 28

    9 function: type name LEFT_ROUND_BRACKET . argument_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET statements RIGHT_CURLY_BRACKET

    INT_TYPE     shift, and go to state 12
    DOUBLE_TYPE  shift, and go to state 13
    FLOAT_TYPE   shift, and go to state 14
    CHAR_TYPE    shift, and go to state 15
    STRING_TYPE  shift, and go to state 16
    BOOL_TYPE    shift, and go to state 17

    $default  reduce using rule 14 (argument)

    argument_list  go to state 33
    argument       go to state 31
    type           go to state 32


State 29

    4 library: INCLUDE LEFT_ANGLE_BRACKET name DOT name RIGHT_ANGLE_BRACKET .

    $default  reduce using rule 4 (library)


State 30

   10 function: VOID_TYPE name LEFT_ROUND_BRACKET argument_list . RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET statements RIGHT_CURLY_BRACKET

    RIGHT_ROUND_BRACKET  shift, and go to state 34


State 31

   11 argument_list: argument . COMMA argument_list
   12              | argument .

    COMMA  shift, and go to state 35

    $default  reduce using rule 12 (argument_list)


State 32

   13 argument: type . name

    NAME  shift, and go to state 10

    name  go to state 36


State 33

    9 function: type name LEFT_ROUND_BRACKET argument_list . RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET statements RIGHT_CURLY_BRACKET

    RIGHT_ROUND_BRACKET  shift, and go to state 37


State 34

   10 function: VOID_TYPE name LEFT_ROUND_BRACKET argument_list RIGHT_ROUND_BRACKET . LEFT_CURLY_BRACKET statements RIGHT_CURLY_BRACKET

    LEFT_CURLY_BRACKET  shift, and go to state 38


State 35

   11 argument_list: argument COMMA . argument_list

    INT_TYPE     shift, and go to state 12
    DOUBLE_TYPE  shift, and go to state 13
    FLOAT_TYPE   shift, and go to state 14
    CHAR_TYPE    shift, and go to state 15
    STRING_TYPE  shift, and go to state 16
    BOOL_TYPE    shift, and go to state 17

    $default  reduce using rule 14 (argument)

    argument_list  go to state 39
    argument       go to state 31
    type           go to state 32


State 36

   13 argument: type name .

    $default  reduce using rule 13 (argument)


State 37

    9 function: type name LEFT_ROUND_BRACKET argument_list RIGHT_ROUND_BRACKET . LEFT_CURLY_BRACKET statements RIGHT_CURLY_BRACKET

    LEFT_CURLY_BRACKET  shift, and go to state 40


State 38

   10 function: VOID_TYPE name LEFT_ROUND_BRACKET argument_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET . statements RIGHT_CURLY_BRACKET

    NAME         shift, and go to state 10
    INT_TYPE     shift, and go to state 12
    DOUBLE_TYPE  shift, and go to state 13
    FLOAT_TYPE   shift, and go to state 14
    CHAR_TYPE    shift, and go to state 15
    STRING_TYPE  shift, and go to state 16
    BOOL_TYPE    shift, and go to state 17
    PRINTF       shift, and go to state 41
    RETURN       shift, and go to state 42
    WHILE        shift, and go to state 43
    DO           shift, and go to state 44
    FOR          shift, and go to state 45
    IF           shift, and go to state 46
    SWITCH       shift, and go to state 47

    $default  reduce using rule 33 (statements)

    name              go to state 48
    type              go to state 49
    statements        go to state 50
    statement         go to state 51
    return_statement  go to state 52
    variable          go to state 53
    while             go to state 54
    if                go to state 55
    do_while          go to state 56
    for               go to state 57
    switch            go to state 58


State 39

   11 argument_list: argument COMMA argument_list .

    $default  reduce using rule 11 (argument_list)


State 40

    9 function: type name LEFT_ROUND_BRACKET argument_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET . statements RIGHT_CURLY_BRACKET

    NAME         shift, and go to state 10
    INT_TYPE     shift, and go to state 12
    DOUBLE_TYPE  shift, and go to state 13
    FLOAT_TYPE   shift, and go to state 14
    CHAR_TYPE    shift, and go to state 15
    STRING_TYPE  shift, and go to state 16
    BOOL_TYPE    shift, and go to state 17
    PRINTF       shift, and go to state 41
    RETURN       shift, and go to state 42
    WHILE        shift, and go to state 43
    DO           shift, and go to state 44
    FOR          shift, and go to state 45
    IF           shift, and go to state 46
    SWITCH       shift, and go to state 47

    $default  reduce using rule 33 (statements)

    name              go to state 48
    type              go to state 49
    statements        go to state 59
    statement         go to state 51
    return_statement  go to state 52
    variable          go to state 53
    while             go to state 54
    if                go to state 55
    do_while          go to state 56
    for               go to state 57
    switch            go to state 58


State 41

   42 statement: PRINTF . LEFT_ROUND_BRACKET QUOTE name QUOTE RIGHT_ROUND_BRACKET SEMICOLON
   43          | PRINTF . LEFT_ROUND_BRACKET QUOTE number QUOTE RIGHT_ROUND_BRACKET SEMICOLON

    LEFT_ROUND_BRACKET  shift, and go to state 60


State 42

   50 return_statement: RETURN . name SEMICOLON
   51                 | RETURN . number SEMICOLON
   52                 | RETURN . expression SEMICOLON
   53                 | RETURN . SEMICOLON

    SEMICOLON           shift, and go to state 61
    LEFT_ROUND_BRACKET  shift, and go to state 62
    NAME                shift, and go to state 10
    NUMBER              shift, and go to state 63
    TRUE_STR            shift, and go to state 64
    FALSE_STR           shift, and go to state 65

    expression  go to state 66
    name        go to state 67
    number      go to state 68


State 43

   58 while: WHILE . LEFT_ROUND_BRACKET conditions RIGHT_ROUND_BRACKET statement_with_or_without_brackets

    LEFT_ROUND_BRACKET  shift, and go to state 69


State 44

   79 do_while: DO . statement_with_or_without_brackets WHILE LEFT_ROUND_BRACKET conditions RIGHT_ROUND_BRACKET SEMICOLON

    LEFT_CURLY_BRACKET  shift, and go to state 70
    NAME                shift, and go to state 10
    INT_TYPE            shift, and go to state 12
    DOUBLE_TYPE         shift, and go to state 13
    FLOAT_TYPE          shift, and go to state 14
    CHAR_TYPE           shift, and go to state 15
    STRING_TYPE         shift, and go to state 16
    BOOL_TYPE           shift, and go to state 17
    PRINTF              shift, and go to state 41
    RETURN              shift, and go to state 42
    WHILE               shift, and go to state 43
    DO                  shift, and go to state 44
    FOR                 shift, and go to state 45
    IF                  shift, and go to state 46
    SWITCH              shift, and go to state 47

    name                                go to state 48
    type                                go to state 49
    statement                           go to state 71
    return_statement                    go to state 52
    variable                            go to state 53
    statement_with_or_without_brackets  go to state 72
    while                               go to state 54
    if                                  go to state 55
    do_while                            go to state 56
    for                                 go to state 57
    switch                              go to state 58


State 45

   80 for: FOR . LEFT_ROUND_BRACKET for_expression RIGHT_ROUND_BRACKET statement_with_or_without_brackets

    LEFT_ROUND_BRACKET  shift, and go to state 73


State 46

   75 if: IF . LEFT_ROUND_BRACKET conditions RIGHT_ROUND_BRACKET statement_with_or_without_brackets else_ifs
   76   | IF . LEFT_ROUND_BRACKET conditions RIGHT_ROUND_BRACKET statement_with_or_without_brackets else_ifs ELSE statement_with_or_without_brackets

    LEFT_ROUND_BRACKET  shift, and go to state 74


State 47

   95 switch: SWITCH . LEFT_ROUND_BRACKET NAME RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET cases RIGHT_CURLY_BRACKET
   96       | SWITCH . LEFT_ROUND_BRACKET NAME RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET cases default RIGHT_CURLY_BRACKET

    LEFT_ROUND_BRACKET  shift, and go to state 75


State 48

   35 statement: name . PLUS PLUS SEMICOLON
   36          | name . MINUS MINUS SEMICOLON
   37          | name . EQUALS expression SEMICOLON
   38          | name . PLUS EQUALS expression SEMICOLON
   39          | name . MINUS EQUALS expression SEMICOLON
   40          | name . MULTIPLY EQUALS expression SEMICOLON
   41          | name . DIVIDE EQUALS expression SEMICOLON

    EQUALS    shift, and go to state 76
    PLUS      shift, and go to state 77
    MINUS     shift, and go to state 78
    MULTIPLY  shift, and go to state 79
    DIVIDE    shift, and go to state 80


State 49

   54 variable: type . name SEMICOLON
   55         | type . name EQUALS expression SEMICOLON

    NAME  shift, and go to state 10

    name  go to state 81


State 50

   10 function: VOID_TYPE name LEFT_ROUND_BRACKET argument_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET statements . RIGHT_CURLY_BRACKET

    RIGHT_CURLY_BRACKET  shift, and go to state 82


State 51

   32 statements: statement . statements

    NAME         shift, and go to state 10
    INT_TYPE     shift, and go to state 12
    DOUBLE_TYPE  shift, and go to state 13
    FLOAT_TYPE   shift, and go to state 14
    CHAR_TYPE    shift, and go to state 15
    STRING_TYPE  shift, and go to state 16
    BOOL_TYPE    shift, and go to state 17
    PRINTF       shift, and go to state 41
    RETURN       shift, and go to state 42
    WHILE        shift, and go to state 43
    DO           shift, and go to state 44
    FOR          shift, and go to state 45
    IF           shift, and go to state 46
    SWITCH       shift, and go to state 47

    $default  reduce using rule 33 (statements)

    name              go to state 48
    type              go to state 49
    statements        go to state 83
    statement         go to state 51
    return_statement  go to state 52
    variable          go to state 53
    while             go to state 54
    if                go to state 55
    do_while          go to state 56
    for               go to state 57
    switch            go to state 58


State 52

   49 statement: return_statement .

    $default  reduce using rule 49 (statement)


State 53

   34 statement: variable .

    $default  reduce using rule 34 (statement)


State 54

   44 statement: while .

    $default  reduce using rule 44 (statement)


State 55

   45 statement: if .

    $default  reduce using rule 45 (statement)


State 56

   46 statement: do_while .

    $default  reduce using rule 46 (statement)


State 57

   47 statement: for .

    $default  reduce using rule 47 (statement)


State 58

   48 statement: switch .

    $default  reduce using rule 48 (statement)


State 59

    9 function: type name LEFT_ROUND_BRACKET argument_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET statements . RIGHT_CURLY_BRACKET

    RIGHT_CURLY_BRACKET  shift, and go to state 84


State 60

   42 statement: PRINTF LEFT_ROUND_BRACKET . QUOTE name QUOTE RIGHT_ROUND_BRACKET SEMICOLON
   43          | PRINTF LEFT_ROUND_BRACKET . QUOTE number QUOTE RIGHT_ROUND_BRACKET SEMICOLON

    QUOTE  shift, and go to state 85


State 61

   53 return_statement: RETURN SEMICOLON .

    $default  reduce using rule 53 (return_statement)


State 62

   15 expression: LEFT_ROUND_BRACKET . expression RIGHT_ROUND_BRACKET

    LEFT_ROUND_BRACKET  shift, and go to state 62
    NAME                shift, and go to state 10
    NUMBER              shift, and go to state 86
    TRUE_STR            shift, and go to state 64
    FALSE_STR           shift, and go to state 65

    expression  go to state 87
    name        go to state 88


State 63

   20 expression: NUMBER .
   25 number: NUMBER .

    SEMICOLON  reduce using rule 20 (expression)
    SEMICOLON  [reduce using rule 25 (number)]
    $default   reduce using rule 20 (expression)


State 64

   22 expression: TRUE_STR .

    $default  reduce using rule 22 (expression)


State 65

   23 expression: FALSE_STR .

    $default  reduce using rule 23 (expression)


State 66

   16 expression: expression . PLUS expression
   17           | expression . MINUS expression
   18           | expression . MULTIPLY expression
   19           | expression . DIVIDE expression
   52 return_statement: RETURN expression . SEMICOLON

    SEMICOLON  shift, and go to state 89
    PLUS       shift, and go to state 90
    MINUS      shift, and go to state 91
    MULTIPLY   shift, and go to state 92
    DIVIDE     shift, and go to state 93


State 67

   21 expression: name .
   50 return_statement: RETURN name . SEMICOLON

    SEMICOLON  shift, and go to state 94

    SEMICOLON  [reduce using rule 21 (expression)]
    $default   reduce using rule 21 (expression)


State 68

   51 return_statement: RETURN number . SEMICOLON

    SEMICOLON  shift, and go to state 95


State 69

   58 while: WHILE LEFT_ROUND_BRACKET . conditions RIGHT_ROUND_BRACKET statement_with_or_without_brackets

    QUOTE               shift, and go to state 96
    LEFT_ROUND_BRACKET  shift, and go to state 97
    NAME                shift, and go to state 10
    NUMBER              shift, and go to state 86
    TRUE_STR            shift, and go to state 64
    FALSE_STR           shift, and go to state 65

    expression  go to state 98
    name        go to state 99
    conditions  go to state 100
    condition   go to state 101


State 70

   56 statement_with_or_without_brackets: LEFT_CURLY_BRACKET . statements RIGHT_CURLY_BRACKET

    NAME         shift, and go to state 10
    INT_TYPE     shift, and go to state 12
    DOUBLE_TYPE  shift, and go to state 13
    FLOAT_TYPE   shift, and go to state 14
    CHAR_TYPE    shift, and go to state 15
    STRING_TYPE  shift, and go to state 16
    BOOL_TYPE    shift, and go to state 17
    PRINTF       shift, and go to state 41
    RETURN       shift, and go to state 42
    WHILE        shift, and go to state 43
    DO           shift, and go to state 44
    FOR          shift, and go to state 45
    IF           shift, and go to state 46
    SWITCH       shift, and go to state 47

    $default  reduce using rule 33 (statements)

    name              go to state 48
    type              go to state 49
    statements        go to state 102
    statement         go to state 51
    return_statement  go to state 52
    variable          go to state 53
    while             go to state 54
    if                go to state 55
    do_while          go to state 56
    for               go to state 57
    switch            go to state 58


State 71

   57 statement_with_or_without_brackets: statement .

    $default  reduce using rule 57 (statement_with_or_without_brackets)


State 72

   79 do_while: DO statement_with_or_without_brackets . WHILE LEFT_ROUND_BRACKET conditions RIGHT_ROUND_BRACKET SEMICOLON

    WHILE  shift, and go to state 103


State 73

   80 for: FOR LEFT_ROUND_BRACKET . for_expression RIGHT_ROUND_BRACKET statement_with_or_without_brackets

    SEMICOLON    shift, and go to state 104
    NAME         shift, and go to state 105
    INT_TYPE     shift, and go to state 12
    DOUBLE_TYPE  shift, and go to state 13
    FLOAT_TYPE   shift, and go to state 14
    CHAR_TYPE    shift, and go to state 15
    STRING_TYPE  shift, and go to state 16
    BOOL_TYPE    shift, and go to state 17

    type            go to state 106
    for_expression  go to state 107
    for_statement   go to state 108
    for_step        go to state 109


State 74

   75 if: IF LEFT_ROUND_BRACKET . conditions RIGHT_ROUND_BRACKET statement_with_or_without_brackets else_ifs
   76   | IF LEFT_ROUND_BRACKET . conditions RIGHT_ROUND_BRACKET statement_with_or_without_brackets else_ifs ELSE statement_with_or_without_brackets

    QUOTE               shift, and go to state 96
    LEFT_ROUND_BRACKET  shift, and go to state 97
    NAME                shift, and go to state 10
    NUMBER              shift, and go to state 86
    TRUE_STR            shift, and go to state 64
    FALSE_STR           shift, and go to state 65

    expression  go to state 98
    name        go to state 99
    conditions  go to state 110
    condition   go to state 101


State 75

   95 switch: SWITCH LEFT_ROUND_BRACKET . NAME RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET cases RIGHT_CURLY_BRACKET
   96       | SWITCH LEFT_ROUND_BRACKET . NAME RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET cases default RIGHT_CURLY_BRACKET

    NAME  shift, and go to state 111


State 76

   37 statement: name EQUALS . expression SEMICOLON

    LEFT_ROUND_BRACKET  shift, and go to state 62
    NAME                shift, and go to state 10
    NUMBER              shift, and go to state 86
    TRUE_STR            shift, and go to state 64
    FALSE_STR           shift, and go to state 65

    expression  go to state 112
    name        go to state 88


State 77

   35 statement: name PLUS . PLUS SEMICOLON
   38          | name PLUS . EQUALS expression SEMICOLON

    EQUALS  shift, and go to state 113
    PLUS    shift, and go to state 114


State 78

   36 statement: name MINUS . MINUS SEMICOLON
   39          | name MINUS . EQUALS expression SEMICOLON

    EQUALS  shift, and go to state 115
    MINUS   shift, and go to state 116


State 79

   40 statement: name MULTIPLY . EQUALS expression SEMICOLON

    EQUALS  shift, and go to state 117


State 80

   41 statement: name DIVIDE . EQUALS expression SEMICOLON

    EQUALS  shift, and go to state 118


State 81

   54 variable: type name . SEMICOLON
   55         | type name . EQUALS expression SEMICOLON

    SEMICOLON  shift, and go to state 119
    EQUALS     shift, and go to state 120


State 82

   10 function: VOID_TYPE name LEFT_ROUND_BRACKET argument_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET statements RIGHT_CURLY_BRACKET .

    $default  reduce using rule 10 (function)


State 83

   32 statements: statement statements .

    $default  reduce using rule 32 (statements)


State 84

    9 function: type name LEFT_ROUND_BRACKET argument_list RIGHT_ROUND_BRACKET LEFT_CURLY_BRACKET statements RIGHT_CURLY_BRACKET .

    $default  reduce using rule 9 (function)


State 85

   42 statement: PRINTF LEFT_ROUND_BRACKET QUOTE . name QUOTE RIGHT_ROUND_BRACKET SEMICOLON
   43          | PRINTF LEFT_ROUND_BRACKET QUOTE . number QUOTE RIGHT_ROUND_BRACKET SEMICOLON

    NAME    shift, and go to state 10
    NUMBER  shift, and go to state 121

    name    go to state 122
    number  go to state 123


State 86

   20 expression: NUMBER .

    $default  reduce using rule 20 (expression)


State 87
